@@ -1,6 +1,7 @@
 2007-03-14  Matthias Wimmer  <m@tthias.eu>
 
-    * jabberd/mio_tls.cc: verifying OpenPGP identities, CRL processing
+    * jabberd/mio_tls.cc: verifying OpenPGP identities, CRL processing, fatal
+	alert logging
     * jabberd/jabberd.h: same
 
 2007-02-21  Matthias Wimmer  <m@tthias.eu>
